# Nfy

./: CMakeLists.txt  LICENSE.md  README.md
Include/: Nfy.hpp
Tests/UnitTests/: CMakeLists.txt  TestNotify.cpp  UnitTest.h
